# helios

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  Cargo.toml  README.md  SPRINT_1.md  SPRINT_2.md  backlog.md  deny.toml  gap_audit.md
.config/: nextest.toml
.github/actions/atlas-stack/: action.yml
.github/scripts/: check_regressions.py
.github/workflows/: book-pages.yml  ci.yml
crates/helios-analysis/: Cargo.toml
crates/helios-analysis/benches/: dvh_queries.rs
crates/helios-analysis/examples/: dvh_analysis.rs  gamma_index.rs  validation_clinical.rs  validation_regression.rs
crates/helios-analysis/src/: dvh.rs  gamma.rs  image_quality.rs  lib.rs  radiobiology.rs  roi.rs
crates/helios-core/: Cargo.toml
crates/helios-core/examples/: validate_foundation_units.rs
crates/helios-core/proptest-regressions/: units.txt
crates/helios-core/src/: constants.rs  error.rs  lib.rs  units.rs
crates/helios-domain/: Cargo.toml
crates/helios-domain/examples/: voxel_grid_construction.rs
crates/helios-domain/src/: collimation.rs  dicom.rs  grid.rs  helical.rs  lib.rs  mlc.rs  storage.rs  volume.rs
crates/helios-gpu/: Cargo.toml
crates/helios-gpu/benches/: projection_throughput.rs  transmission_throughput.rs
crates/helios-gpu/examples/: gpu_attenuation_projection.rs
crates/helios-gpu/src/: attenuation.rs  lib.rs  projection.rs  transmission.rs
crates/helios-imaging/: Cargo.toml
crates/helios-imaging/examples/: fbp_reconstruction.rs  mvct_registration.rs  radon_sinogram.rs  sirt_reconstruction.rs
crates/helios-imaging/src/: backproject.rs  fbp.rs  lib.rs  noise.rs  radon.rs  registration.rs  sirt.rs
crates/helios-math/: Cargo.toml
crates/helios-math/src/: geometry.rs  lib.rs
crates/helios-physics/: Cargo.toml
crates/helios-physics/examples/: compton_physics.rs  photon_attenuation.rs
crates/helios-physics/proptest-regressions/: attenuation.txt
crates/helios-physics/src/: attenuation.rs  compton.rs  ct_calibration.rs  lib.rs  projection.rs
crates/helios-physics/src/attenuation/: tables.rs
crates/helios-planning/: Cargo.toml
crates/helios-planning/examples/: dvh_optimization.rs
crates/helios-planning/src/: autodiff.rs  lib.rs  optimize.rs
crates/helios-python/: Cargo.toml  pyproject.toml
crates/helios-python/src/: lib.rs
crates/helios-python/tests/: test_helios.py
crates/helios-simulation/: Cargo.toml
crates/helios-simulation/examples/: adaptive_rt_workflow.rs  linac_dose_accumulation.rs  tomotherapy_workflow.rs
crates/helios-simulation/src/: acquisition.rs  delivery.rs  dose_accumulation.rs  lib.rs  portal.rs
crates/helios-simulation/tests/: end_to_end.rs
crates/helios-solver/: Cargo.toml
crates/helios-solver/benches/: scatter_superposition.rs
crates/helios-solver/examples/: collapsed_cone_3d.rs
crates/helios-solver/src/: attenuation_map.rs  deposition.rs  dose.rs  lib.rs  oriented_scatter.rs  projector.rs  scatter.rs
docs/adr/: 0001-aequitas-domain-units.md  0002-proteus-material-density.md  0003-atlas-benchmark-gate.md  0004-asclepius-response-ownership.md  0005-tyche-noise-stream.md  0006-dvh-dose-quantities.md  0007-gamma-physical-criteria.md  0008-delivery-physical-quantities.md  0009-image-quality-physical-semantics.md  0010-compton-energy-quantity.md
docs/book/: BOOK_ORGANIZATION.md  README.md  SUMMARY.md  appendix_api.md  appendix_changelog.md  appendix_dependencies.md  appendix_glossary.md  book.toml  domain_geometry.md  dose_attenuation.md  dose_collapsed_cone.md  dose_spectra.md  dose_terma.md  foundations.md  gpu_coeus.md  gpu_dose.md  gpu_overview.md  imaging_ct.md  imaging_fbp.md  imaging_mvct.md  imaging_radon.md  memory.md  migration_arrays.md  migration_coeus.md  migration_concurrency.md  migration_eunomia.md  migration_fft.md  migration_gat_tiles.md  migration_geometry.md  migration_image_io.md  migration_memory.md  migration_overview.md  migration_simd.md  migration_validation.md  numerics.md  planning_dvh.md  planning_gamma.md  planning_helical.md  planning_mlc.md  validation_clinical.md  (+5 more)
docs/book/examples/: adaptive_rt_workflow.md  collapsed_cone_3d.md  compton_physics.md  dvh_analysis.md  dvh_optimization.md  fbp_reconstruction.md  gamma_index.md  gpu_attenuation_projection.md  linac_dose_accumulation.md  mvct_registration.md  photon_attenuation.md  radon_sinogram.md  sirt_reconstruction.md  tomotherapy_workflow.md  validate_foundation_units.md  validation_clinical.md  validation_regression.md  voxel_grid_construction.md
docs/book/figures/: MANIFEST.json
parity_artefacts/: INDEX.html
validation_reports/: 2026-07-01-gpu-transmission-throughput.md  2026-07-02-gpu-projection-throughput.md  2026-07-02-scatter-superposition-optimization.md  2026-07-15-dvh-query-optimization.md
xtask/: Cargo.toml  README.md  legacy_surface.allowlist
xtask/src/: check_figures.rs  main.rs  migration_audit.rs  prebook.rs
