# Helios (Helios-rs) — unified radiation therapy simulation/planning and imaging.
#
# Integrator workspace built on the Atlas stack, mirroring the kwavers/cfdrs model:
# Atlas foundation/infrastructure/domain crates are consumed as *remote git
# dependencies* (each carries its own [workspace]; Cargo resolves their internal
# inheritance against THEIR roots — no path scaffolding here). Members inherit the
# shared version set below via `{ workspace = true }` (SSOT).
[workspace]
members = [
    "crates/helios-core",
    "crates/helios-math",
    "crates/helios-domain",
    "crates/helios-physics",
    "crates/helios-solver",
    "crates/helios-analysis",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"
license = "MIT OR Apache-2.0"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/helios"
rust-version = "1.85"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
# Production-path lints are enforced with -D warnings in the pre-merge gate.
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# ── Internal Helios crates (added as they are created, per architecture_scoping
#    growth triggers — no speculative empty-crate scaffolding). ──
helios-core = { path = "crates/helios-core", version = "0.0.1" }
helios-math = { path = "crates/helios-math", version = "0.0.1" }
helios-domain = { path = "crates/helios-domain", version = "0.0.1" }
helios-physics = { path = "crates/helios-physics", version = "0.0.1" }
helios-solver = { path = "crates/helios-solver", version = "0.0.1" }
helios-analysis = { path = "crates/helios-analysis", version = "0.0.1" }

# ── External foundation crates (versions verified against the installed 1.95
#    toolchain / current registry; mirror kwavers' locked set). ──
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.0"
num-traits = "0.2"
proptest = "1.0"
criterion = "0.5"
approx = "0.5"

# ── Atlas stack (remote git deps; package names verified against each repo's
#    manifests). Declared here as the integration SSOT; individual member crates
#    opt in as the corresponding Helios layer is built out.
#    Layer map is authoritative in ARCHITECTURE.md. ──
# Imaging foundation (DICOM/MVCT I/O, registration, VTK).
ritk-core = { git = "https://github.com/ryancinsight/ritk" }
ritk-io = { git = "https://github.com/ryancinsight/ritk" }
ritk-registration = { git = "https://github.com/ryancinsight/ritk" }
# Geometry kernel (binary MLC, collimators, jaws, patient meshes).
gaia = { git = "https://github.com/ryancinsight/gaia", default-features = false }
# GPU compute (wgpu/WGSL pipelines, kernel caching) + orchestration.
hephaestus-core = { git = "https://github.com/ryancinsight/hephaestus" }
hephaestus-wgpu = { git = "https://github.com/ryancinsight/hephaestus" }
moirai = { git = "https://github.com/ryancinsight/Moirai.git" }
moirai-parallel = { git = "https://github.com/ryancinsight/Moirai.git", package = "moirai-parallel", default-features = false, features = ["parallel"] }
# Tensors, autodiff, optimizers, neural surrogates.
coeus-core = { git = "https://github.com/ryancinsight/Coeus.git" }
coeus-tensor = { git = "https://github.com/ryancinsight/Coeus.git" }
coeus-autograd = { git = "https://github.com/ryancinsight/Coeus.git" }
coeus-optim = { git = "https://github.com/ryancinsight/Coeus.git" }
# Volumetric storage (HDF5/Zarr, compression).
consus-core = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-io = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-compression = { git = "https://github.com/ryancinsight/consus", features = ["std", "deflate"] }
# Numeric datatype SSOT (Scalar seam: RealField/FloatElement/NumericElement).
eunomia = { git = "https://github.com/ryancinsight/eunomia" }
# Array substrate + geometry primitives, and portable SIMD.
# default-features disabled: leto's default `mnemosyne-memory` feature pulls an
# mnemosyne rev pinned to themis ^0.8 (skewed against themis HEAD 0.9.x). Helios
# opts into mnemosyne placement explicitly at the layer that needs it (themis/
# mnemosyne integration), not transitively through the geometry substrate.
leto = { git = "https://github.com/ryancinsight/leto", default-features = false, features = ["std"] }
hermes-simd = { git = "https://github.com/ryancinsight/hermes" }
# Memory management / placement.
mnemosyne-core = { git = "https://github.com/ryancinsight/Mnemosyne.git" }
themis = { git = "https://github.com/ryancinsight/themis" }
# Spectral / transform methods.
apollo = { git = "https://github.com/ryancinsight/apollo", package = "apollo-fft" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
