# Helios (Helios-rs) — unified radiation therapy simulation/planning and imaging.
#
# Integrator workspace built on the Atlas stack, mirroring the kwavers/cfdrs model:
# Atlas foundation/infrastructure/domain crates are consumed as *remote git
# dependencies* (each carries its own [workspace]; Cargo resolves their internal
# inheritance against THEIR roots — no path scaffolding here). Members inherit the
# shared version set below via `{ workspace = true }` (SSOT).
[workspace]
members = [
    "crates/helios-core",
    "crates/helios-math",
    "crates/helios-domain",
    "crates/helios-physics",
    "crates/helios-solver",
    "crates/helios-analysis",
    "crates/helios-gpu",
    "crates/helios-simulation",
    "crates/helios-imaging",
    "crates/helios-planning",
    "crates/helios-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Ryan Clanton <ryanclanton@outlook.com>"]
repository = "https://github.com/ryancinsight/helios"
rust-version = "1.95"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
# Production-path lints are enforced with -D warnings in the pre-merge gate.
all = { level = "warn", priority = -1 }

[workspace.dependencies]
# ── Internal Helios crates (added as they are created, per architecture_scoping
#    growth triggers — no speculative empty-crate scaffolding). ──
helios-core = { path = "crates/helios-core", version = "0.1.0" }
helios-math = { path = "crates/helios-math", version = "0.1.0" }
helios-domain = { path = "crates/helios-domain", version = "0.1.0" }
helios-physics = { path = "crates/helios-physics", version = "0.1.0" }
helios-solver = { path = "crates/helios-solver", version = "0.1.0" }
helios-analysis = { path = "crates/helios-analysis", version = "0.1.0" }
helios-gpu = { path = "crates/helios-gpu", version = "0.1.0" }
helios-simulation = { path = "crates/helios-simulation", version = "0.1.0" }
helios-imaging = { path = "crates/helios-imaging", version = "0.1.0" }
helios-planning = { path = "crates/helios-planning", version = "0.1.0" }

# ── External foundation crates (versions verified against the installed 1.95
#    toolchain / current registry; mirror kwavers' locked set). ──
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.0"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
proptest = "1.0"
criterion = "0.5"
approx = "0.5"

# ── Atlas stack (remote git deps; package names verified against each repo's
#    manifests). Declared here as the integration SSOT; individual member crates
#    opt in as the corresponding Helios layer is built out.
#    Layer map is authoritative in ARCHITECTURE.md. ──
# Imaging foundation (DICOM/MVCT I/O, registration, VTK).
ritk-core = { git = "https://github.com/ryancinsight/ritk" }
ritk-io = { git = "https://github.com/ryancinsight/ritk" }
ritk-registration = { git = "https://github.com/ryancinsight/ritk" }
# Native DICOM parse/decode (CT/MVCT real-input path). ritk-dicom owns parsing,
# typed attribute access, transfer-syntax dispatch, and pixel decoding.
ritk-dicom = { git = "https://github.com/ryancinsight/ritk" }
# Geometry kernel (binary MLC, collimators, jaws, patient meshes).
gaia = { git = "https://github.com/ryancinsight/gaia", default-features = false }
# GPU compute (wgpu/WGSL pipelines, kernel caching) + orchestration.
hephaestus-core = { git = "https://github.com/ryancinsight/hephaestus" }
hephaestus-wgpu = { git = "https://github.com/ryancinsight/hephaestus" }
moirai = { git = "https://github.com/ryancinsight/Moirai.git" }
moirai-parallel = { git = "https://github.com/ryancinsight/Moirai.git", package = "moirai-parallel", default-features = false, features = ["parallel"] }
# Tensors, autodiff, optimizers, neural surrogates.
coeus-core = { git = "https://github.com/ryancinsight/Coeus.git" }
coeus-tensor = { git = "https://github.com/ryancinsight/Coeus.git" }
coeus-autograd = { git = "https://github.com/ryancinsight/Coeus.git" }
coeus-optim = { git = "https://github.com/ryancinsight/Coeus.git" }
# Volumetric storage (HDF5/Zarr, compression).
consus-core = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-hdf5 = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-io = { git = "https://github.com/ryancinsight/consus", features = ["std"] }
consus-compression = { git = "https://github.com/ryancinsight/consus", features = ["std", "deflate"] }
# Numeric datatype SSOT (Scalar seam: RealField/FloatElement/NumericElement).
aequitas = { git = "https://github.com/ryancinsight/aequitas", rev = "49ee8004e008a480ac871c3782d00d921ba41c01" }
eunomia = { git = "https://github.com/ryancinsight/eunomia" }
# Array substrate + geometry primitives, and portable SIMD.
# default-features disabled: leto's default `mnemosyne-memory` feature pulls an
# mnemosyne rev pinned to themis ^0.8 (skewed against themis HEAD 0.9.x). Helios
# opts into mnemosyne placement explicitly at the layer that needs it (themis/
# mnemosyne integration), not transitively through the geometry substrate.
leto = { git = "https://github.com/ryancinsight/leto", default-features = false, features = ["std"] }
hermes-simd = { git = "https://github.com/ryancinsight/hermes" }
# Memory management / placement.
mnemosyne-core = { git = "https://github.com/ryancinsight/Mnemosyne.git" }
themis = { git = "https://github.com/ryancinsight/themis" }
# Spectral / transform methods.
apollo = { git = "https://github.com/ryancinsight/apollo", package = "apollo-fft" }

# ── Synchronized local-checkout patches (H-050) ──
# The Atlas stack under D:/atlas/repos is a synchronized submodule checkout that
# cross-links via local path deps (gaia→leto/eunomia, leto→eunomia). Redirect the
# git sources to those same local paths so the whole graph resolves to ONE source
# per crate, and Helios consumes the *migrated* local gaia geometry (leto/eunomia
# Ray/Aabb) rather than gaia's pre-migration published default branch.
#
# This is the local development wiring; the git-dep declarations above remain the
# release SSOT. When gaia's leto migration is merged+published (a `refactor!`
# breaking change also updating kwavers), these patches can be dropped.
[patch."https://github.com/ryancinsight/leto"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/leto.git"]
leto = { path = "../leto/crates/leto" }
leto-ops = { path = "../leto/crates/leto-ops" }

[patch."https://github.com/ryancinsight/eunomia"]
eunomia = { path = "../eunomia/crates/eunomia" }

[patch."https://github.com/ryancinsight/gaia"]
gaia = { path = "../gaia" }

[patch."https://github.com/ryancinsight/ritk"]
ritk-dicom = { path = "../ritk/crates/ritk-dicom" }

[patch."https://github.com/ryancinsight/consus"]
consus-core = { path = "../consus/crates/consus-core" }
consus-hdf5 = { path = "../consus/crates/consus-hdf5" }
consus-io = { path = "../consus/crates/consus-io" }
consus-compression = { path = "../consus/crates/consus-compression" }

[patch."https://github.com/ryancinsight/Coeus.git"]
coeus-core = { path = "../coeus/coeus-core" }
coeus-tensor = { path = "../coeus/coeus-tensor" }
coeus-autograd = { path = "../coeus/coeus-autograd" }

[patch."https://github.com/ryancinsight/hephaestus"]
hephaestus-core = { path = "../hephaestus/crates/hephaestus-core" }
hephaestus-wgpu = { path = "../hephaestus/crates/hephaestus-wgpu" }

# The GPU stack (hephaestus-wgpu → leto[parallel,mnemosyne-memory]) transitively
# pulls the mnemosyne/moirai/hermes cluster; redirect those git sources to the
# local synchronized checkout too (matching hephaestus's own root patches) so the
# whole graph resolves to one consistent, buildable source set (fixes the
# leto→mnemosyne(git 1e014d25)→themis ^0.8 skew, G-10).
[patch."https://github.com/ryancinsight/Mnemosyne.git"]
mnemosyne = { path = "../mnemosyne/crates/mnemosyne" }
mnemosyne-core = { path = "../mnemosyne/crates/mnemosyne-core" }
mnemosyne-arena = { path = "../mnemosyne/crates/mnemosyne-arena" }
mnemosyne-local = { path = "../mnemosyne/crates/mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne/crates/mnemosyne-heap" }

[patch."https://github.com/ryancinsight/Moirai.git"]
moirai = { path = "../moirai/moirai" }
moirai-core = { path = "../moirai/moirai-core" }
moirai-scheduler = { path = "../moirai/moirai-scheduler" }
moirai-parallel = { path = "../moirai/moirai-parallel" }
moirai-gpu = { path = "../moirai/moirai-gpu" }
moirai-sync = { path = "../moirai/moirai-sync" }
moirai-async = { path = "../moirai/moirai-async" }
moirai-executor = { path = "../moirai/moirai-executor" }
moirai-transport = { path = "../moirai/moirai-transport" }
moirai-iter = { path = "../moirai/moirai-iter" }
moirai-pal = { path = "../moirai/moirai-pal" }
moirai-utils = { path = "../moirai/moirai-utils" }

[patch."https://github.com/ryancinsight/hermes.git"]
hermes-simd = { path = "../hermes/crates/hermes-simd" }

# themis/melinoe: hephaestus-core (patched to local path) depends on the git
# themis which in turn requires melinoe ^0.7.0; redirect both to the local
# synchronized checkouts so the whole graph resolves against ONE melinoe version
# (0.9.x), and hephaestus/helios-gpu compile cleanly from this workspace root.
[patch."https://github.com/ryancinsight/themis"]
themis = { path = "../themis" }

[patch."https://github.com/ryancinsight/melinoe.git"]
melinoe = { path = "../melinoe" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
