[package]
name = "helios-analysis"
description = "Helios dosimetric analysis: dose-volume histograms and the gamma index (dose-difference / distance-to-agreement) for plan/measurement comparison."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aequitas = { workspace = true }
asclepius = { workspace = true }
helios-core = { workspace = true }
helios-math = { workspace = true }
helios-domain = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }
criterion = { workspace = true }
helios-imaging = { workspace = true }

[[bench]]
name = "dvh_queries"
harness = false
