[package]
name = "helios-core"
description = "Helios foundation layer: typed errors, physical constants, and validating domain newtypes for radiation therapy and imaging."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aequitas = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
