[package]
name = "helios-domain"
description = "Helios domain layer: patient/imaging voxel-grid geometry and dense scalar volumes (CT/MVCT) with trilinear sampling."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helios-core = { workspace = true }
helios-math = { workspace = true }
leto = { workspace = true }
# DICOM CT/MVCT load path — feature-gated so the heavy dicom-rs parser stays out
# of the core build for consumers that do not need real-file I/O. The feature
# gates a *complete* implementation (not a stub), per the build-size discipline.
ritk-dicom = { workspace = true, optional = true }
dicom = { workspace = true, optional = true }
# Volumetric storage boundary (consus, mandated Atlas component) — feature-gated
# like `dicom` so the HDF5 machinery stays out of the core build. The feature
# gates a complete implementation, not a stub.
consus-core = { workspace = true, optional = true }
consus-hdf5 = { workspace = true, optional = true }
consus-io = { workspace = true, optional = true }

[features]
dicom = ["dep:ritk-dicom", "dep:dicom"]
storage = ["dep:consus-core", "dep:consus-hdf5", "dep:consus-io"]

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
