[package]
name = "helios-gpu"
description = "Helios GPU compute layer: dispatch over the hephaestus ComputeDevice/wgpu backend for imaging and dose kernels."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helios-core = { workspace = true }
helios-domain = { workspace = true }
hephaestus-core = { workspace = true }
hephaestus-wgpu = { workspace = true }
leto = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
# Differential reference for the GPU projector tests only.
helios-math = { workspace = true }
helios-solver = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transmission_throughput"
harness = false

[[bench]]
name = "projection_throughput"
harness = false
