[package]
name = "helios-gpu"
description = "Helios GPU compute layer: dispatch over the hephaestus ComputeDevice/wgpu backend for imaging and dose kernels."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck = { workspace = true }
helios-core = { workspace = true }
helios-domain = { workspace = true }
helios-math = { workspace = true }
hephaestus-core = { workspace = true }
hephaestus-wgpu = { workspace = true }
leto = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }
# Differential references for the GPU projector / attenuation tests only.
helios-physics = { workspace = true }
helios-solver = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "transmission_throughput"
harness = false

[[bench]]
name = "projection_throughput"
harness = false
