[package]
name = "helios-imaging"
description = "Helios radiation-imaging: MVCT forward projection (parallel-beam Radon) and reconstruction."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helios-core = { workspace = true }
helios-math = { workspace = true }
helios-domain = { workspace = true }
helios-solver = { workspace = true }
tyche-core = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }
# Quantify reconstruction accuracy / contrast with the analysis image-quality
# metrics in an end-to-end recon test (analysis is a lower layer; dev-only).
helios-analysis = { workspace = true }
