[package]
name = "helios-physics"
description = "Helios radiation-interaction physics: photon attenuation (Beer–Lambert), mass/linear attenuation, and CT-number-to-density calibration."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aequitas = { workspace = true }
helios-core = { workspace = true }
# Physics needs only the Scalar seam, not the geometry vocabulary. A direct path
# dep (not `workspace = true`) is used so `default-features = false` is honored —
# under workspace inheritance cargo ignores it. This keeps the physics layer
# buildable independently of the geometry stack.
helios-math = { path = "../helios-math", default-features = false }
proteus = { workspace = true }

[dev-dependencies]
eunomia = { workspace = true }
proptest = { workspace = true }
