[package]
name = "helios-planning"
description = "Helios inverse treatment planning: fluence-map / beam-weight optimization against dosimetric objectives."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helios-core = { workspace = true }
# Only the Scalar seam is needed; the geometry vocabulary is not.
helios-math = { path = "../helios-math", default-features = false }
[dev-dependencies]
approx = { workspace = true }
