[package]
name = "helios-planning"
description = "Helios inverse treatment planning: fluence-map / beam-weight optimization against dosimetric objectives."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helios-core = { workspace = true }
# Only the Scalar seam is needed; the geometry vocabulary is not.
helios-math = { path = "../helios-math", default-features = false }
asclepius = { workspace = true, optional = true }
asclepius-coeus = { workspace = true, optional = true }
# coeus (mandated Atlas autodiff component) — feature-gated so the tensor/tape
# machinery stays out of the core build. The feature gates a complete
# implementation, not a stub.
coeus-autograd = { workspace = true, optional = true }
coeus-core = { workspace = true, optional = true }
coeus-tensor = { workspace = true, optional = true }

[features]
autodiff = [
    "dep:asclepius",
    "dep:asclepius-coeus",
    "dep:coeus-autograd",
    "dep:coeus-core",
    "dep:coeus-tensor",
]

[dev-dependencies]
eunomia = { workspace = true }
