[package]
name = "helios-simulation"
description = "Helios time-dependent helical TomoTherapy delivery/acquisition simulation: gantry rotation + couch translation driving forward projection over time."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
helios-core = { workspace = true }
helios-math = { workspace = true }
helios-domain = { workspace = true }
helios-physics = { workspace = true }
helios-solver = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
# End-to-end workflow test only: the higher application layers (imaging recon /
# registration, dosimetric analysis) are pulled as dev-deps so the integrated
# imaging+delivery pipeline can be validated across seams. Test-only, so no
# production dependency cycle (imaging/analysis do not depend on simulation).
helios-imaging = { workspace = true }
helios-analysis = { workspace = true }
